--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-nd"
+name = "ferric-ai"
 version = "0.1.0"
 authors = ["Patrick Song <32438365+patricksongzy@users.noreply.github.com>"]
 edition = "2018"
