--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ f32 = []
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.3"
