--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "corgi"
 description = "Machine learning, and automatic differentation implementation for Rust"
 keywords = ["machine-learning", "neural-network", "deep-learning", "autograd", "tensor"]
 categories = ["mathematics", "science"]
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Patrick Song <32438365+patricksongzy@users.noreply.github.com>"]
 readme = "README.md"
 homepage = "https://github.com/patricksongzy/corgi"
@@ -12,9 +12,12 @@ license = "MIT"
 edition = "2018"
 
 [features]
+default = ["blas"]
 f32 = []
+blas = []
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rand = "0.8.3"
+libc = "0.2"
