--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "corgi"
 description = "Machine learning, and automatic differentation implementation for Rust"
 keywords = ["machine-learning", "neural-network", "deep-learning", "autograd", "tensor"]
 categories = ["mathematics", "science"]
-version = "0.5.2"
+version = "0.6.0"
 authors = ["Patrick Song <32438365+patricksongzy@users.noreply.github.com>"]
 readme = "README.md"
 homepage = "https://github.com/patricksongzy/corgi"
@@ -11,12 +11,12 @@ repository = "https://github.com/patricksongzy/corgi"
 license = "MIT"
 edition = "2018"
 
-[features]
-f32 = []
-blas = []
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rand = "0.8.3"
-libc = "0.2"
+libc = { version = "0.2", optional = true }
+
+[features]
+f32 = []
+blas = ["libc"]
