--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "corgi"
 description = "Machine learning, and automatic differentation implementation for Rust"
 keywords = ["machine-learning", "neural-network", "deep-learning", "autograd", "tensor"]
 categories = ["mathematics", "science"]
-version = "0.9.8"
-authors = ["Patrick Song <32438365+patricksongzy@users.noreply.github.com>"]
+version = "0.9.9"
+authors = ["Patrick Song <patricksongzy@gmail.com>"]
 readme = "README.md"
 homepage = "https://github.com/patricksongzy/corgi"
 repository = "https://github.com/patricksongzy/corgi"
